--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.4.2",
+    "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
+    "next": "13.5.6",
+    "next-auth": "^4.24.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "react-hot-toast": "^2.4.1",
+    "swr": "^2.2.4",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "eslint-config-next": "13.5.6",
+    "postcss": "^8",
+    "prisma": "^5.4.2",
+    "tailwindcss": "^3"
   }
 }
