--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.4.2",
+    "@prisma/client": "^5.5.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "http-status": "^1.7.3",
+    "jose": "^5.1.0",
     "next": "13.5.6",
     "next-auth": "^4.24.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-redux": "^8.1.3",
     "swr": "^2.2.4",
     "zustand": "^4.4.4"
   },
@@ -26,7 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
-    "prisma": "^5.4.2",
+    "prisma": "^5.5.2",
     "tailwindcss": "^3"
   }
 }
